fix latest script to only pull ensemble forecasts

--- a/ecmwf_tc_forecasts_example_KIKO.ipynb
+++ b/ecmwf_tc_forecasts_example_KIKO.ipynb
@@ -27,8 +27,8 @@
    "id": "755e7190",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T20:58:05.308391Z",
-     "start_time": "2025-09-24T20:58:05.213186Z"
+     "end_time": "2025-09-25T08:01:25.683113Z",
+     "start_time": "2025-09-25T08:01:25.597435Z"
     }
    },
    "source": [
@@ -50,8 +50,8 @@
    "id": "6ff85008",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T20:58:06.053325Z",
-     "start_time": "2025-09-24T20:58:05.311621Z"
+     "end_time": "2025-09-25T08:01:26.348895Z",
+     "start_time": "2025-09-25T08:01:25.686302Z"
     }
    },
    "source": [
@@ -67,51 +67,51 @@
      "output_type": "stream",
      "text": [
       "Found 1 forecast dates\n",
-      "   Found 59 tropical cyclone track files\n",
+      "   Found 61 tropical cyclone track files\n",
       "Found 42 unique storms\n",
       "Found 42 unique storms:\n",
-      " 1. GABRIELLE at 35p8degN    , -50p2degW    (Forecast: 20250924120000)\n",
-      " 2. NARDA    at 15p1degN    , -111p1degW   (Forecast: 20250924120000)\n",
-      " 3. RAGASA   at 21p7degN    , 111p1degE    (Forecast: 20250924120000)\n",
-      " 4. NEOGURI  at 31p3degN    , 156p4degE    (Forecast: 20250924120000)\n",
-      " 5. BUALOI   at 10p3degN    , 131p3degE    (Forecast: 20250924120000)\n",
-      " 6. 70W      at 21p6degN    , 111p3degE    (Forecast: 20250924120000)\n",
-      " 7. 71W      at 10p1degN    , 131p2degE    (Forecast: 20250924120000)\n",
-      " 8. 72W      at 30p5degN    , 156p3degE    (Forecast: 20250924120000)\n",
-      " 9. 73W      at 37p4degN    , 162p3degE    (Forecast: 20250924120000)\n",
-      "10. 75W      at 31p1degN    , 118p4degE    (Forecast: 20250924120000)\n",
-      "11. 76W      at 12p5degN    , 162p4degE    (Forecast: 20250924120000)\n",
-      "12. 77W      at 32p9degN    , 121p7degE    (Forecast: 20250924120000)\n",
-      "13. 78W      at 17p2degN    , 114p7degE    (Forecast: 20250924120000)\n",
-      "14. 79W      at 6p9degN     , 173p4degE    (Forecast: 20250924120000)\n",
-      "15. 80W      at 32p7degN    , 125degE      (Forecast: 20250924120000)\n",
-      "16. 81W      at 29p5degN    , 122p1degE    (Forecast: 20250924120000)\n",
-      "17. 70E      at 15p2degN    , -111p1degW   (Forecast: 20250924120000)\n",
-      "18. 71E      at 9p9degN     , -114degW     (Forecast: 20250924120000)\n",
-      "19. 72E      at 15p2degN    , -107degW     (Forecast: 20250924120000)\n",
-      "20. 73E      at 12p4degN    , -91degW      (Forecast: 20250924120000)\n",
-      "21. 74E      at 12p6degN    , -90degW      (Forecast: 20250924120000)\n",
-      "22. 75E      at 10p7degN    , -94p2degW    (Forecast: 20250924120000)\n",
-      "23. 70L      at 10p4degN    , -76p5degW    (Forecast: 20250924120000)\n",
-      "24. 71L      at 19p5degN    , -54p3degW    (Forecast: 20250924120000)\n",
-      "25. 72L      at 35p4degN    , -50p5degW    (Forecast: 20250924120000)\n",
-      "26. 73L      at 18p1degN    , -67p6degW    (Forecast: 20250924120000)\n",
-      "27. 74L      at 10p5degN    , -15p4degW    (Forecast: 20250924120000)\n",
-      "28. 75L      at 10p5degN    , -76p5degW    (Forecast: 20250924120000)\n",
-      "29. 76L      at 11p3degN    , -76p8degW    (Forecast: 20250924120000)\n",
-      "30. 77L      at 10p4degN    , -24p2degW    (Forecast: 20250924120000)\n",
-      "31. 78L      at 10p2degN    , -9p8degW     (Forecast: 20250924120000)\n",
-      "32. 79L      at 29p2degN    , -54degW      (Forecast: 20250924120000)\n",
-      "33. 70C      at 7p2degN     , -156p4degW   (Forecast: 20250924120000)\n",
-      "34. 71C      at 10p5degN    , -163p5degW   (Forecast: 20250924120000)\n",
-      "35. 70A      at 20p6degN    , 72p8degE     (Forecast: 20250924120000)\n",
-      "36. 71A      at 19p7degN    , 71p5degE     (Forecast: 20250924120000)\n",
-      "37. 72A      at 19p9degN    , 71p7degE     (Forecast: 20250924120000)\n",
-      "38. 70B      at 18p8degN    , 89p7degE     (Forecast: 20250924120000)\n",
-      "39. 71B      at 19p5degN    , 88p8degE     (Forecast: 20250924120000)\n",
-      "40. 72B      at 18p7degN    , 85p2degE     (Forecast: 20250924120000)\n",
-      "41. 73B      at 20p9degN    , 90p2degE     (Forecast: 20250924120000)\n",
-      "42. 74B      at 18p5degN    , 90p1degE     (Forecast: 20250924120000)\n"
+      " 1. GABRIELLE at 35p9degN    , -44degW      (Forecast: 20250925000000)\n",
+      " 2. HUMBERTO at 20p5degN    , -55p4degW    (Forecast: 20250925000000)\n",
+      " 3. NARDA    at 15p1degN    , -112p7degW   (Forecast: 20250925000000)\n",
+      " 4. NEOGURI  at 33p2degN    , 157p4degE    (Forecast: 20250925000000)\n",
+      " 5. BUALOI   at 10p8degN    , 129degE      (Forecast: 20250925000000)\n",
+      " 6. 70W      at 21p8degN    , 108p8degE    (Forecast: 20250925000000)\n",
+      " 7. 71W      at 10p9degN    , 128p9degE    (Forecast: 20250925000000)\n",
+      " 8. 72W      at 32p2degN    , 157p2degE    (Forecast: 20250925000000)\n",
+      " 9. 73W      at 30p6degN    , 121p6degE    (Forecast: 20250925000000)\n",
+      "10. 74W      at 16p4degN    , 150p7degE    (Forecast: 20250925000000)\n",
+      "11. 75W      at 34p9degN    , 123p3degE    (Forecast: 20250925000000)\n",
+      "12. 76W      at 17p3degN    , 128p8degE    (Forecast: 20250925000000)\n",
+      "13. 77W      at 33p2degN    , 126p4degE    (Forecast: 20250925000000)\n",
+      "14. 79W      at 22p7degN    , 153p4degE    (Forecast: 20250925000000)\n",
+      "15. 70E      at 15p5degN    , -113degW     (Forecast: 20250925000000)\n",
+      "16. 72E      at 7p9degN     , -111p4degW   (Forecast: 20250925000000)\n",
+      "17. 73E      at 10p7degN    , -92p7degW    (Forecast: 20250925000000)\n",
+      "18. 74E      at 13p3degN    , -95p3degW    (Forecast: 20250925000000)\n",
+      "19. 75E      at 7p7degN     , -134p4degW   (Forecast: 20250925000000)\n",
+      "20. 76E      at 13p6degN    , -117degW     (Forecast: 20250925000000)\n",
+      "21. 77E      at 12p6degN    , -91p9degW    (Forecast: 20250925000000)\n",
+      "22. 78E      at 12p1degN    , -100p2degW   (Forecast: 20250925000000)\n",
+      "23. 71L      at 35p1degN    , -44p5degW    (Forecast: 20250925000000)\n",
+      "24. 72L      at 5p4degN     , -71p5degW    (Forecast: 20250925000000)\n",
+      "25. 73L      at 18p1degN    , -70p4degW    (Forecast: 20250925000000)\n",
+      "26. 74L      at 9p8degN     , -38p2degW    (Forecast: 20250925000000)\n",
+      "27. 75L      at 13p3degN    , -15p9degW    (Forecast: 20250925000000)\n",
+      "28. 76L      at 20p6degN    , -93degW      (Forecast: 20250925000000)\n",
+      "29. 77L      at 21p5degN    , -82p9degW    (Forecast: 20250925000000)\n",
+      "30. 78L      at 23p1degN    , -71p7degW    (Forecast: 20250925000000)\n",
+      "31. 70C      at 9p3degN     , -150p3degW   (Forecast: 20250925000000)\n",
+      "32. 71C      at 7p3degN     , -156p4degW   (Forecast: 20250925000000)\n",
+      "33. 72C      at 8p2degN     , -171p8degW   (Forecast: 20250925000000)\n",
+      "34. 70A      at 19p9degN    , 71p1degE     (Forecast: 20250925000000)\n",
+      "35. 71A      at 26p8degN    , 55p1degE     (Forecast: 20250925000000)\n",
+      "36. 72A      at 19p5degN    , 72p3degE     (Forecast: 20250925000000)\n",
+      "37. 73A      at 24p7degN    , 60p5degE     (Forecast: 20250925000000)\n",
+      "38. 70B      at 19p4degN    , 81p3degE     (Forecast: 20250925000000)\n",
+      "39. 71B      at 17p9degN    , 91p4degE     (Forecast: 20250925000000)\n",
+      "40. 72B      at 15p6degN    , 84p5degE     (Forecast: 20250925000000)\n",
+      "41. 73B      at 18p6degN    , 84p6degE     (Forecast: 20250925000000)\n",
+      "42. 74B      at 19p5degN    , 93degE       (Forecast: 20250925000000)\n"
      ]
     }
    ],
@@ -128,8 +128,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T20:58:10.256919Z",
-     "start_time": "2025-09-24T20:58:06.056891Z"
+     "end_time": "2025-09-25T08:01:30.557796Z",
+     "start_time": "2025-09-25T08:01:26.355613Z"
     }
    },
    "cell_type": "code",
@@ -183,8 +183,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T20:58:10.600911Z",
-     "start_time": "2025-09-24T20:58:10.296728Z"
+     "end_time": "2025-09-25T08:01:30.930360Z",
+     "start_time": "2025-09-25T08:01:30.602430Z"
     }
    },
    "cell_type": "code",
@@ -196,14 +196,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T20:58:10.756093Z",
-     "start_time": "2025-09-24T20:58:10.605964Z"
+     "end_time": "2025-09-25T08:07:18.645598Z",
+     "start_time": "2025-09-25T08:07:18.605351Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Extract data from the downloaded KIKO storm file\n",
-    "filename = 'tc_kiko/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4.bin'\n",
+    "filename = 'tc_kiko/A_JSXX02ECEP101200_C_ECMP_20250910120000_tropical_cyclone_track_KIKO_-157p5degW_22p7degN_bufr4.bin'\n",
     "\n",
     "# Extract using the main function (saves to CSV automatically)\n",
     "result = extract_tc_data_from_file(filename, output_dir='tc_kiko')"
@@ -214,9 +214,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting tropical cyclone data from: tc_kiko/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4.bin\n",
+      "Extracting tropical cyclone data from: tc_kiko/A_JSXX02ECEP101200_C_ECMP_20250910120000_tropical_cyclone_track_KIKO_-157p5degW_22p7degN_bufr4.bin\n",
       "**************** MESSAGE:  1   *****************\n",
-      "Date and time:  10 . 9 . 2025    0 : 0\n",
+      "Date and time:  10 . 9 . 2025    12 : 0\n",
       "Storm identifier:  11E\n",
       "Number of Ensemble Members:  52\n"
      ]
@@ -228,14 +228,14 @@
      "traceback": [
       "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
       "\u001B[31mIndexError\u001B[39m                                Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[5]\u001B[39m\u001B[32m, line 5\u001B[39m\n\u001B[32m      2\u001B[39m filename = \u001B[33m'\u001B[39m\u001B[33mtc_kiko/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4.bin\u001B[39m\u001B[33m'\u001B[39m\n\u001B[32m      4\u001B[39m \u001B[38;5;66;03m# Extract using the main function (saves to CSV automatically)\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m5\u001B[39m result = \u001B[43mextract_tc_data_from_file\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfilename\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moutput_dir\u001B[49m\u001B[43m=\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mtc_kiko\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[10]\u001B[39m\u001B[32m, line 5\u001B[39m\n\u001B[32m      2\u001B[39m filename = \u001B[33m'\u001B[39m\u001B[33mtc_kiko/A_JSXX02ECEP101200_C_ECMP_20250910120000_tropical_cyclone_track_KIKO_-157p5degW_22p7degN_bufr4.bin\u001B[39m\u001B[33m'\u001B[39m\n\u001B[32m      4\u001B[39m \u001B[38;5;66;03m# Extract using the main function (saves to CSV automatically)\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m5\u001B[39m result = \u001B[43mextract_tc_data_from_file\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfilename\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moutput_dir\u001B[49m\u001B[43m=\u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mtc_kiko\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
       "\u001B[36mFile \u001B[39m\u001B[32m~/Library/CloudStorage/OneDrive-Personal/UNICEF/TC-Forecasts-ECMWF/ecmwf_tc_data_extractor.py:415\u001B[39m, in \u001B[36mextract_tc_data_from_file\u001B[39m\u001B[34m(filename, output_dir, verbose)\u001B[39m\n\u001B[32m    412\u001B[39m     \u001B[38;5;28mprint\u001B[39m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mExtracting tropical cyclone data from: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mfilename\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n\u001B[32m    414\u001B[39m \u001B[38;5;66;03m# Extract data\u001B[39;00m\n\u001B[32m--> \u001B[39m\u001B[32m415\u001B[39m df = \u001B[43mextract_tc_data\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfilename\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mverbose\u001B[49m\u001B[43m=\u001B[49m\u001B[43mverbose\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    417\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m df.empty:\n\u001B[32m    418\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m verbose:\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~/Library/CloudStorage/OneDrive-Personal/UNICEF/TC-Forecasts-ECMWF/ecmwf_tc_data_extractor.py:250\u001B[39m, in \u001B[36mextract_tc_data\u001B[39m\u001B[34m(filename, verbose)\u001B[39m\n\u001B[32m    247\u001B[39m     \u001B[38;5;66;03m# Store forecast data for all ensemble members at this time step\u001B[39;00m\n\u001B[32m    248\u001B[39m     \u001B[38;5;28;01mfor\u001B[39;00m k \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(memberNumber)):\n\u001B[32m    249\u001B[39m         data[k][i] = [\n\u001B[32m--> \u001B[39m\u001B[32m250\u001B[39m             \u001B[43mlat\u001B[49m\u001B[43m[\u001B[49m\u001B[43mk\u001B[49m\u001B[43m]\u001B[49m,      \u001B[38;5;66;03m# Storm center latitude\u001B[39;00m\n\u001B[32m    251\u001B[39m             lon[k],      \u001B[38;5;66;03m# Storm center longitude\u001B[39;00m\n\u001B[32m    252\u001B[39m             press[k],    \u001B[38;5;66;03m# Storm center pressure\u001B[39;00m\n\u001B[32m    253\u001B[39m             latWind[k],  \u001B[38;5;66;03m# Maximum wind latitude\u001B[39;00m\n\u001B[32m    254\u001B[39m             lonWind[k],  \u001B[38;5;66;03m# Maximum wind longitude\u001B[39;00m\n\u001B[32m    255\u001B[39m             wind10m[k]   \u001B[38;5;66;03m# Maximum wind speed\u001B[39;00m\n\u001B[32m    256\u001B[39m         ]\n\u001B[32m    259\u001B[39m \u001B[38;5;66;03m# *************************************************************************************************\u001B[39;00m\n\u001B[32m    260\u001B[39m \u001B[38;5;66;03m# EXTRACT WIND RADII DATA\u001B[39;00m\n\u001B[32m    261\u001B[39m \u001B[38;5;66;03m# Tropical Cyclone Wind Radii product\u001B[39;00m\n\u001B[32m   (...)\u001B[39m\u001B[32m    264\u001B[39m \u001B[38;5;66;03m# 5021 - bearingOrAzimuth [deg], two values to define the quadrant limits, e.g. 0 and 90 for quadrant 1\u001B[39;00m\n\u001B[32m    265\u001B[39m \u001B[38;5;66;03m# 19004 - effectiveRadiusWithRespectToWindSpeedsAboveThreshold [m], maximum radius at which wind speeds exceed the given threshold within the given quadrant\u001B[39;00m\n\u001B[32m    267\u001B[39m windSpeedThreshold = codes_get_array(bufr, \u001B[33m'\u001B[39m\u001B[33mwindSpeedThreshold\u001B[39m\u001B[33m'\u001B[39m)\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/Library/CloudStorage/OneDrive-Personal/UNICEF/TC-Forecasts-ECMWF/ecmwf_tc_data_extractor.py:170\u001B[39m, in \u001B[36mextract_tc_data\u001B[39m\u001B[34m(filename, verbose)\u001B[39m\n\u001B[32m    164\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m    165\u001B[39m     \u001B[38;5;66;03m# Analysis position is the same for all members, but pressure/wind may vary\u001B[39;00m\n\u001B[32m    166\u001B[39m     \u001B[38;5;28;01mfor\u001B[39;00m k \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(memberNumber)):\n\u001B[32m    167\u001B[39m         data[k][\u001B[32m0\u001B[39m] = [\n\u001B[32m    168\u001B[39m             latitudeAnalysis[\u001B[32m0\u001B[39m],      \u001B[38;5;66;03m# Same storm center lat for all\u001B[39;00m\n\u001B[32m    169\u001B[39m             longitudeAnalysis[\u001B[32m0\u001B[39m],     \u001B[38;5;66;03m# Same storm center lon for all\u001B[39;00m\n\u001B[32m--> \u001B[39m\u001B[32m170\u001B[39m             \u001B[43mpressureAnalysis\u001B[49m\u001B[43m[\u001B[49m\u001B[43mk\u001B[49m\u001B[43m]\u001B[49m,      \u001B[38;5;66;03m# Member-specific pressure\u001B[39;00m\n\u001B[32m    171\u001B[39m             latitudeMaxWind0[\u001B[32m0\u001B[39m],      \u001B[38;5;66;03m# Same max wind lat for all\u001B[39;00m\n\u001B[32m    172\u001B[39m             longitudeMaxWind0[\u001B[32m0\u001B[39m],     \u001B[38;5;66;03m# Same max wind lon for all\u001B[39;00m\n\u001B[32m    173\u001B[39m             windMaxWind0[k]           \u001B[38;5;66;03m# Member-specific wind speed\u001B[39;00m\n\u001B[32m    174\u001B[39m         ]\n\u001B[32m    176\u001B[39m \u001B[38;5;66;03m# Process forecast data for each time period beyond analysis (t=0)\u001B[39;00m\n\u001B[32m    177\u001B[39m timePeriod = [\u001B[32m0\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m x \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(numberOfPeriods)]  \u001B[38;5;66;03m# Initialize time period array\u001B[39;00m\n",
       "\u001B[31mIndexError\u001B[39m: index 1 is out of bounds for axis 0 with size 1"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -246,7 +246,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T20:58:10.758953Z",
+     "end_time": "2025-09-25T08:01:31.084031Z",
      "start_time": "2025-09-18T12:41:17.377244Z"
     }
    },
@@ -316,7 +316,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T20:58:10.759092Z",
+     "end_time": "2025-09-25T08:01:31.084285Z",
      "start_time": "2025-09-18T12:41:17.409995Z"
     }
    },
@@ -335,7 +335,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T20:58:10.768086Z",
+     "end_time": "2025-09-25T08:01:31.084412Z",
      "start_time": "2025-09-24T20:56:18.851718Z"
     }
    },
@@ -351,7 +351,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T20:58:10.769905Z",
+     "end_time": "2025-09-25T08:01:31.084528Z",
      "start_time": "2025-09-18T12:41:18.659466Z"
     }
    },
