--- a/ecmwf_tc_forecasts_example_LATEST.ipynb
+++ b/ecmwf_tc_forecasts_example_LATEST.ipynb
@@ -116,11 +116,13 @@
     "        after_track = file.split('tropical_cyclone_track_')[1]\n",
     "        storm_name = after_track.split('_')[0]  # Get the first part before the next underscore\n",
     "\n",
-    "        # Check if it's a named storm (doesn't start with a number)\n",
-    "        if not storm_name[0].isdigit():\n",
-    "            named_storm_files.append(file)\n",
-    "        else:\n",
-    "            numeric_storm_files.append(file)\n",
+    "        # Check for ensemble forecasts\n",
+    "        if file[20:22] == 'EP':\n",
+    "            # Check if it's a named storm (doesn't start with a number)\n",
+    "            if not storm_name[0].isdigit():\n",
+    "                named_storm_files.append(file)\n",
+    "            else:\n",
+    "                numeric_storm_files.append(file)\n",
     "\n",
     "# Prefer named storms, fall back to numeric if no named storms available\n",
     "if named_storm_files:\n",
@@ -218,7 +220,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "fig_wind = create_wind_field_visualization(csv_file)",
+   "source": "fig_wind = create_wind_field_visualization(csv_file, n_members=1)",
    "id": "26095b07aa5b72ca",
    "outputs": [],
    "execution_count": null
