fix download script to only download 'EP', ensemble forecasts

--- a/ecmwf_tc_forecasts_example_LATEST.ipynb
+++ b/ecmwf_tc_forecasts_example_LATEST.ipynb
@@ -117,12 +117,12 @@
     "        storm_name = after_track.split('_')[0]  # Get the first part before the next underscore\n",
     "\n",
     "        # Check for ensemble forecasts\n",
-    "        if file[20:22] == 'EP':\n",
-    "            # Check if it's a named storm (doesn't start with a number)\n",
-    "            if not storm_name[0].isdigit():\n",
-    "                named_storm_files.append(file)\n",
-    "            else:\n",
-    "                numeric_storm_files.append(file)\n",
+    "        #if file[20:22] == 'EP':\n",
+    "        # Check if it's a named storm (doesn't start with a number)\n",
+    "        if not storm_name[0].isdigit():\n",
+    "            named_storm_files.append(file)\n",
+    "        else:\n",
+    "            numeric_storm_files.append(file)\n",
     "\n",
     "# Prefer named storms, fall back to numeric if no named storms available\n",
     "if named_storm_files:\n",
