add transformer script

--- a/ecmwf_tc_forecasts_example_MARIO.ipynb
+++ b/ecmwf_tc_forecasts_example_MARIO.ipynb
@@ -26,7 +26,11 @@
    "cell_type": "code",
    "id": "755e7190",
    "metadata": {},
-   "source": "from ecmwf_tc_data_downloader import download_tc_data",
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "from ecmwf_tc_data_downloader import download_tc_data"
+   ],
    "outputs": [],
    "execution_count": null
   },
@@ -155,9 +159,54 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Transform",
+   "id": "f42e46ba2b25971d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from ecmwf_tc_data_transformer import transform_tc_data_from_file, transform_all_in_directory\n",
+    "import pandas as pd"
+   ],
+   "id": "7a3e6fdcfa957caa",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "result = transform_tc_data_from_file(\"tc_mario/A_JSXX01ECEP150000_C_ECMP_20250915000000_tropical_cyclone_track_MARIO_-111p1degW_19p1degN_bufr4_extracted.csv\")\n",
+    "\n",
+    "# result = transform_all_in_directory(\"tc_mario\")"
+   ],
+   "id": "d9ae4a300db99e61",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "df_transformed = pd.read_csv(\"tc_mario/A_JSXX01ECEP150000_C_ECMP_20250915000000_tropical_cyclone_track_MARIO_-111p1degW_19p1degN_bufr4_extracted_transformed.csv\")",
+   "id": "24f4248a8c355a78",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "df_transformed",
+   "id": "c678a1da822083e3",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": "",
-   "id": "d9ae4a300db99e61",
+   "id": "35f2756d13f26dfa",
    "outputs": [],
    "execution_count": null
   }
